<resources>
    <string name="app_name">ChatApp</string>
    <string name="register_textview">Register</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="messages_txt">Messages</string>
    <string name="fullname_txt">Fullname</string>
    <string name="last_message_txt">Last Message</string>
    <string name="number_one">1</string>
    <string name="email_signin">Email</string>
    <string name="password_sigin">Password</string>
    <string name="username_txt">Username</string>
    <string name="log_in_txt">Log In</string>
    <string name="log_in_btn">Log In</string>
    <string name="chat_app_txt">Chat App</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="logout_txt">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message_txt">Type a message</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="info_reset">By clicking RESET, an email to reset your password will be sent</string>
</resources>