<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/theme_color_8"
    tools:context=".LoginActivity">

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/log_in_txt">
    </TextView>


    <EditText
        android:id="@+id/email"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_signin"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:background="@drawable/round_back_white"
        android:layout_height="50dp">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password_sigin"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:background="@drawable/round_back_white"
        android:layout_height="50dp">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/log_in_btn"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/round_back_theme">
    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>