<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/theme_color_8"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/welcome"
            android:layout_above="@id/signupBtn"
            >
        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/round_back_theme"
            android:layout_above="@id/loginBtn"
            android:layout_centerInParent="true">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_theme"
            android:text="@string/log_in_btn"
            android:textColor="@color/white"
            android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>

    </RelativeLayout>

</LinearLayout>